--- a/trunk/Tp3/codigo/build.xml
+++ b/trunk/Tp3/codigo/build.xml
@@ -4,7 +4,7 @@
 <property name="dir.lib" value="lib" />
 <property name="dir.bin" value="bin" />
 <property name="dir.jar" value="jar" />
-<property name="dir.src" value="src" /><br/>
+<property name="dir.src" value="src" />
 <property name="dir.etc" value="etc" />
 <property name="dir.rep" value="report" />
 <property name="name.jar" value="casino.jar" />
