--- a/Tp3/codigo/src/core/ImplementationFactory.properties
+++ b/Tp3/codigo/src/core/ImplementationFactory.properties
@@ -2,6 +2,7 @@
 
 implementations.ISuma=implementations.SumaImpl
 implementations.IResta=implementations.RestaImpl
+casino.IServiciosCasino=casino.ManejadorCasino
 
 # Versiones para desarrollo
 
