--- a/trunk/Tp3/codigo/build.xml
+++ b/trunk/Tp3/codigo/build.xml
@@ -2,6 +2,8 @@
 <project name="Casino Online" default="zip">
 
 <property name="dir.lib" value="lib" />
+<property name="dir.doc" value="doc" />
+<property name="dir.api" value="${dir.doc}/api" />
 <property name="dir.bin" value="bin" />
 <property name="dir.jar" value="jar" />
 <property name="dir.src" value="src" />
@@ -26,6 +28,7 @@
     <delete dir="${dir.bin}" />
     <delete dir="${dir.jar}" />
 	<delete dir="${dir.rep}" />
+	<delete dir="${dir.doc}" />	
 </target>
 
 <target name="makedir" depends="clear" description="Crea los directorios">
@@ -34,6 +37,8 @@
     <mkdir dir="${dir.jar}" />
 	<mkdir dir="${dir.lib}" />
 	<mkdir dir="${dir.rep}" />
+	<mkdir dir="${dir.doc}" />
+	<mkdir dir="${dir.api}" />	
 </target>
 
 <target name="make" depends="makedir" description="Compila el proyecto">
@@ -99,8 +104,31 @@
 	</xslt>
 </target>
 
+<target name="javadoc" depends="checkstyle" description="Genera reporte de violaciones de convenciones de codigo.">
+	<echo>Generando JavaDoc: ..................................... </echo>
+	<javadoc
+		destdir="${dir.api}"
+		author="true"
+		version="true"
+		use="true"
+		windowtitle="Casino Online. Grupo2">
 
-<target name="all" depends="checkstyle" description="Realiza todo.">
+	    <packageset dir="${dir.src}" defaultexcludes="yes">
+	      <include name="**"/>
+	      <!--exclude name="com/dummy/test/doc-files/**"/-->
+	    </packageset>
+
+	    <doctitle><![CDATA[<h1>Test</h1>]]></doctitle>
+	    <bottom><![CDATA[<i>Copyright &#169; 2008 Grupo2. Derechos Reservados.</i>]]></bottom>
+	    <tag name="todo" scope="all" description="To do:"/>
+	    <group title="Group 1 Packages" packages="*"/>
+	    <!--group title="Group 2 Packages" packages="com.dummy.test.b*:com.dummy.test.c*"/-->
+	    <link offline="true" href="http://java.sun.com/j2se/1.5.0/docs/api/" packagelistLoc="C:\tmp"/>
+	    <link href="http://developer.java.sun.com/developer/products/xml/docs/api/"/>
+	</javadoc>
+</target>
+
+<target name="all" depends="javadoc" description="Realiza todo.">
 	<echo>All Actions: ..................................... </echo>
 </target>
 
