--- a/Tp3/codigo/build.xml
+++ b/Tp3/codigo/build.xml
@@ -16,6 +16,7 @@
 	<fileset dir="${dir.lib}" includes="log4j.jar"/>
 	<fileset dir="${dir.lib}" includes="xstream-1.3.jar"/>
 	<fileset dir="${dir.lib}" includes="checkstyle-all-4.4.jar"/>
+	<fileset dir="${dir.lib}" includes="opencsv-1.8.jar"/>
 </path>
 
    
