* ya pude apostar y tirar en craps

--- a/Tp3/codigo/build.xml
+++ b/Tp3/codigo/build.xml
@@ -58,7 +58,8 @@
 		<exclude name="java.*"/>
 		<exclude name="javax.*"/>
 		<exclude name="org.apache.*"/>
-		<exclude name="com.thoughtworks.*"/>		
+		<exclude name="com.thoughtworks.*"/>	<br/>
+		<exclude name="au.com.*"/>		
 		<classespath>
 			<pathelement location="${dir.bin}" />
 		</classespath>
