--- a/Tp3/codigo/src/log4j.properties
+++ b/Tp3/codigo/src/log4j.properties
@@ -13,7 +13,8 @@ log4j.appender.performance.layout.ConversionPattern=PERFORMANCE|%d{HH:mm:ss,SSS}
 
 
 ### root logger option ###
-log4j.rootLogger=debug, stdout
+log4j.rootLogger=info, stdout
+log4j.logger.MessageParser=debug, stdout
 
 ########### Performance ############
 #log4j.logger.crm.core.appl.performance.FwkPerformanceLogger=debug, performance
