--- a/trunk/Tp3/codigo/build.xml
+++ b/trunk/Tp3/codigo/build.xml
@@ -58,7 +58,7 @@
 		<exclude name="java.*"/>
 		<exclude name="javax.*"/>
 		<exclude name="org.apache.*"/>
-		<exclude name="com.thoughtworks.*"/>	<br/>
+		<exclude name="com.thoughtworks.*"/>
 		<exclude name="au.com.*"/>		
 		<classespath>
 			<pathelement location="${dir.bin}" />
