--- a/trunk/Tp3/codigo/src/log4j.properties
+++ b/trunk/Tp3/codigo/src/log4j.properties
@@ -1,5 +1,3 @@
-### direct log messages to stdout ###
-
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -13,12 +11,7 @@ log4j.appender.performance.layout.ConversionPattern=PERFORMANCE|%d{HH:mm:ss,SSS}
 
 
 ### root logger option ###
-log4j.rootLogger=info, stdout
-log4j.logger.MessageParser=debug, stdout
-
-########### Performance ############
-#log4j.logger.crm.core.appl.performance.FwkPerformanceLogger=debug, performance
-
-
+log4j.rootLogger=debug, stdout
+log4j.logger.MessageParser=fatal, stdout
 
 
