--- a/trunk/Tp3/codigo/src/log4j.properties
+++ b/trunk/Tp3/codigo/src/log4j.properties
@@ -1,7 +1,8 @@
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%t -CASINO ONLINE> %d{ABSOLUTE}. %5p %c{1}:%L - %m%n
+#log4j.appender.stdout.layout.ConversionPattern=%t -CASINO ONLINE> %d{ABSOLUTE}. %5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%t. %5p %c{1}:%L - %m%n
 
 log4j.appender.performance=org.apache.log4j.FileAppender
 log4j.appender.performance.file=D:/ApplPerformance.log
@@ -11,7 +12,7 @@ log4j.appender.performance.layout.ConversionPattern=PERFORMANCE|%d{HH:mm:ss,SSS}
 
 
 ### root logger option ###
-log4j.rootLogger=debug, stdout
-log4j.logger.MessageParser=fatal, stdout
+log4j.rootLogger=info, stdout
+log4j.logger.MessageParser=debug, stdout
 
 
