--- a/Tp3/codigo/src/servicios/ImplementationFactory.properties
+++ b/Tp3/codigo/src/servicios/ImplementationFactory.properties
@@ -1,9 +1,9 @@
 # Versiones para reales
 
-servicios.IServiciosCasino=casino.ManejadorCasino
-servicios.IServiciosJugador=casino.ManejadorJugador
-servicios.IServiciosModoDirigido=casino.ManejadorModoDirigido
-servicios.IServiciosCraps=craps.ManejadorMesaCraps
+casino.IServiciosCasino=casino.ManejadorCasino
+casino.IServiciosJugador=casino.ManejadorJugador
+casino.IServiciosModoDirigido=casino.ManejadorModoDirigido
+craps.IServiciosCraps=craps.ManejadorMesaCraps
 
 # Versiones para prueba
 
