--- a/trunk/Tp3/codigo/src/log4j.properties
+++ b/trunk/Tp3/codigo/src/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.performance.layout.ConversionPattern=PERFORMANCE|%d{HH:mm:ss,SSS}
 
 
 ### root logger option ###
-log4j.rootLogger=info, stdout
+log4j.rootLogger=debug, stdout
 log4j.logger.MessageParser=debug, stdout
 
 
