--- a/trunk/Tp3/codigo/src/core/ImplementationFactory.properties
+++ b/trunk/Tp3/codigo/src/core/ImplementationFactory.properties
@@ -4,6 +4,7 @@ casino.IServiciosCasino=casino.ManejadorCasino
 casino.IServiciosJugador=casino.ManejadorJugador
 casino.IServiciosModoDirigido=casino.ManejadorModoDirigido
 craps.IServiciosCraps=craps.ManejadorMesaCraps
+craps.IManejadorObservadoresCraps=observerCraps.ManejadorObservadoresCraps
 
 # Versiones para prueba
 
