--- a/Tp3/codigo/src/configuration/mensajeroConfig.properties
+++ b/Tp3/codigo/src/configuration/mensajeroConfig.properties
@@ -1,8 +1,8 @@
-dirMensajeroCraps=D:/casino/messageBox
-dirMensajeroCrapsSalida=D:/casino/messageBox
-dirMensajeroCasino=D:/casino/messageBox
-dirMensajeroAdministracion=D:/casino/messageBox
-filtroMensajeroAdministracion=abrirCasino.*|cerrarCasino.*|setModo.*|setJugada.*
+dirMensajeroCraps=D:/Casino
+dirMensajeroCrapsSalida=D:/Casino
+dirMensajeroCasino=D:/Casino
+dirMensajeroAdministracion=D:/Casino
+filtroMensajeroAdministracion=abrirCasino.*|cerrarCasino.*|setModo.*|setJugada.*|reporteRankingJugadores.*
 filtroMensajeroCasino=entradaCasino.*|salidaCasino.*|estadoCasino.*
 filtroMensajeroCraps=entradaCraps.*|salidaCraps.*|tirarCraps.*|apostarCraps.*
 fittroMensajeroCrapsSalida=NOFILE
