--- a/Tp3/codigo/src/configuration/mensajeroConfig.properties
+++ b/Tp3/codigo/src/configuration/mensajeroConfig.properties
@@ -1,7 +1,7 @@
-dirMensajeroCraps=F:/- 21-07-08/TPPP/Tp3/messageBox
-dirMensajeroCrapsSalida=F:/- 21-07-08/TPPP/Tp3/messageBox
-dirMensajeroCasino=F:/- 21-07-08/TPPP/Tp3/messageBox
-dirMensajeroAdministracion=F:/- 21-07-08/TPPP/Tp3/messageBox
+dirMensajeroCraps=D:/casino/messageBox
+dirMensajeroCrapsSalida=D:/casino/messageBox
+dirMensajeroCasino=D:/casino/messageBox
+dirMensajeroAdministracion=D:/casino/messageBox
 filtroMensajeroAdministracion=abrirCasino.*|cerrarCasino.*|setModo.*|setJugada.*|reporteRankingJugadores.*
 filtroMensajeroCasino=entradaCasino.*|salidaCasino.*|estadoCasino.*
 filtroMensajeroCraps=entradaCraps.*|salidaCraps.*|tirarCraps.*|apostarCraps.*
