--- a/Tp3/codigo/src/configuration/mensajeroConfig.properties
+++ b/Tp3/codigo/src/configuration/mensajeroConfig.properties
@@ -2,7 +2,7 @@ dirMensajeroCraps=D:/casino/messageBox
 dirMensajeroCrapsSalida=D:/casino/messageBox
 dirMensajeroCasino=D:/casino/messageBox
 dirMensajeroAdministracion=D:/casino/messageBox
-filtroMensajeroAdministracion=abrirCasino.*|cerrarCasino.*|setModo.*|setJugada.*|reporteRankingJugadores.*
-filtroMensajeroCasino=entradaCasino.*|salidaCasino.*|estadoCasino.*
-filtroMensajeroCraps=entradaCraps.*|salidaCraps.*|tirarCraps.*|apostarCraps.*
+filtroMensajeroAdministracion=abrirCasino02.*|cerrarCasino02.*|setModo02.*|setJugada02.*|reporteRankingJugadores02.*
+filtroMensajeroCasino=entradaCasino02.*|salidaCasino02.*|estadoCasino02.*
+filtroMensajeroCraps=entradaCraps02.*|salidaCraps02.*|tirarCraps02.*|apostarCraps02.*|reporteEstadoActual02.*
 fittroMensajeroCrapsSalida=NOFILE
