--- a/trunk/Tp3/codigo/src/configuration/mensajeroConfig.properties
+++ b/trunk/Tp3/codigo/src/configuration/mensajeroConfig.properties
@@ -1,7 +1,7 @@
-dirMensajeroCraps=C:/ING-TP2/tp3/messageBox
-dirMensajeroCrapsSalida=C:/ING-TP2/tp3/messageBox
-dirMensajeroCasino=C:/ING-TP2/tp3/messageBox
-dirMensajeroAdministracion=C:/ING-TP2/tp3/messageBox
+dirMensajeroCraps=D:/casino/messageBox
+dirMensajeroCrapsSalida=D:/casino/messageBox
+dirMensajeroCasino=D:/casino/messageBox
+dirMensajeroAdministracion=D:/casino/messageBox
 filtroMensajeroAdministracion=abrirCasino02.*|cerrarCasino02.*|setModo02.*|setJugada02.*|reporteRankingJugadores02.*|reporteEstadoActual02.*
 filtroMensajeroCasino=entradaCasino02.*|salidaCasino02.*|estadoCasino02.*
 filtroMensajeroCraps=entradaCraps02.*|salidaCraps02.*|tirarCraps02.*|apostarCraps02.*
