* mas y mas cosas para el informe

--- a/Tp3/codigo/src/log4j.properties
+++ b/Tp3/codigo/src/log4j.properties
@@ -4,15 +4,21 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%t -CASINO ONLINE> %d{ABSOLUTE}. %5p %c{1}:%L - %m%n
 log4j.appender.stdout.layout.ConversionPattern=%t. %5p %c{1}:%L - %m%n
 
-log4j.appender.performance=org.apache.log4j.FileAppender
-log4j.appender.performance.file=D:/ApplPerformance.log
-log4j.appender.performance.append=false
-log4j.appender.performance.layout=org.apache.log4j.PatternLayout
-log4j.appender.performance.layout.ConversionPattern=PERFORMANCE|%d{HH:mm:ss,SSS}|%m%n
+log4j.appender.logfile=org.apache.log4j.FileAppender
+log4j.appender.logfile.file=server.log
+log4j.appender.logfile.append=false
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=CASINO|%d{HH:mm:ss,SSS}|%m%n
+
+log4j.appender.msgfile=org.apache.log4j.FileAppender
+log4j.appender.msgfile.file=server.log
+log4j.appender.msgfile.append=false
+log4j.appender.msgfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.msgfile.layout.ConversionPattern=MESSAGE|%d{HH:mm:ss,SSS}|%m%n
 
 
 ### root logger option ###
-log4j.rootLogger=info, stdout
-log4j.logger.MessageParser=debug, stdout
+log4j.rootLogger=info, stdout, logfile 
+log4j.logger.MessageParser=debug, stdout, msgfile
 
 
