--- a/Tp3/codigo/src/log4j.properties
+++ b/Tp3/codigo/src/log4j.properties
@@ -1,24 +1,28 @@
+# APPENDER POR CONSOLA
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=%t -CASINO ONLINE> %d{ABSOLUTE}. %5p %c{1}:%L - %m%n
-log4j.appender.stdout.layout.ConversionPattern=%t. %5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%t -CASINO ONLINE> %d{ABSOLUTE}. %5p %c{1}:%L - %m%n
 
+# APENDER POR ARCHIVO DE CASINO
 log4j.appender.logfile=org.apache.log4j.FileAppender
 log4j.appender.logfile.file=server.log
 log4j.appender.logfile.append=false
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=CASINO|%d{HH:mm:ss,SSS}|%m%n
 
+# APENDER POR ARCHIVO DE MENSAJERIA
 log4j.appender.msgfile=org.apache.log4j.FileAppender
 log4j.appender.msgfile.file=server.log
 log4j.appender.msgfile.append=false
 log4j.appender.msgfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.msgfile.layout.ConversionPattern=MESSAGE|%d{HH:mm:ss,SSS}|%m%n
 
+## LOGGERS
 
-### root logger option ###
+# CASINO 
 log4j.rootLogger=info, stdout, logfile 
+# MENSAJERIA
 log4j.logger.MessageParser=debug, stdout, msgfile
 
 
