--- a/Tp3/codigo/src/configuration/mensajeroConfig.properties
+++ b/Tp3/codigo/src/configuration/mensajeroConfig.properties
@@ -1,7 +1,7 @@
-dirMensajeroCraps=D:/casino/messageBox
-dirMensajeroCrapsSalida=D:/casino/messageBox
-dirMensajeroCasino=D:/casino/messageBox
-dirMensajeroAdministracion=D:/casino/messageBox
+dirMensajeroCraps=F:/- 21-07-08/TPPP/Tp3/messageBox
+dirMensajeroCrapsSalida=F:/- 21-07-08/TPPP/Tp3/messageBox
+dirMensajeroCasino=F:/- 21-07-08/TPPP/Tp3/messageBox
+dirMensajeroAdministracion=F:/- 21-07-08/TPPP/Tp3/messageBox
 filtroMensajeroAdministracion=abrirCasino02.*|cerrarCasino02.*|setModo02.*|setJugada02.*|reporteRankingJugadores02.*|reporteEstadoActual02.*
 filtroMensajeroCasino=entradaCasino02.*|salidaCasino02.*|estadoCasino02.*
 filtroMensajeroCraps=entradaCraps02.*|salidaCraps02.*|tirarCraps02.*|apostarCraps02.*
