* arreglo solapamiento de archivos de log

--- a/Tp3/codigo/src/log4j.properties
+++ b/Tp3/codigo/src/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.logfile.layout.ConversionPattern=CASINO|%d{HH:mm:ss,SSS}|%m%n
 
 # APENDER POR ARCHIVO DE MENSAJERIA
 log4j.appender.msgfile=org.apache.log4j.FileAppender
-log4j.appender.msgfile.file=server.log
+log4j.appender.msgfile.file=messages.log
 log4j.appender.msgfile.append=false
 log4j.appender.msgfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.msgfile.layout.ConversionPattern=MESSAGE|%d{HH:mm:ss,SSS}|%m%n
@@ -21,7 +21,7 @@ log4j.appender.msgfile.layout.ConversionPattern=MESSAGE|%d{HH:mm:ss,SSS}|%m%n
 ## LOGGERS
 
 # CASINO 
-log4j.rootLogger=info, stdout, logfile 
+log4j.rootLogger=debug, stdout, logfile 
 # MENSAJERIA
 log4j.logger.MessageParser=debug, stdout, msgfile
 
